--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koldly — AI Sales Development Rep That Never Sleeps</title>
-    <meta name="description" content="Your AI Sales Team That Never Sleeps. Koldly finds prospects, researches their pain points, writes personalized outreach, and books meetings — autonomously. Cold outreach on autopilot.">
+    <meta name="description" content="Your AI Sales Team That Never Sleeps. Koldly finds prospects, researches their pain points, and writes personalized outreach — autonomously. Cold outreach on autopilot.">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Koldly — AI Sales Development Rep">
-    <meta property="og:description" content="Your AI Sales Team That Never Sleeps. Koldly finds prospects, researches pain points, writes personalized outreach, and books meetings.">
+    <meta property="og:description" content="Your AI Sales Team That Never Sleeps. Koldly finds prospects, researches pain points, and writes personalized outreach autonomously.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://koldly.com">
 
@@ -26,19 +26,14 @@
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
       "name": "Koldly",
-      "description": "AI Sales Development Rep that finds prospects, researches their pain points, writes personalized outreach, and books meetings autonomously.",
+      "description": "AI Sales Development Rep that finds prospects, researches their pain points, and writes personalized outreach autonomously.",
       "url": "https://koldly.com",
       "applicationCategory": "BusinessApplication",
       "offers": {
         "@type": "Offer",
-        "price": "39",
+        "price": "29",
         "priceCurrency": "USD",
         "priceValidUntil": "2026-12-31"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "ratingCount": "42"
       },
       "creator": {
         "@type": "Organization",
@@ -691,7 +686,7 @@
     <section class="hero">
         <div class="container">
             <h1>Your AI Sales Team That Never Sleeps</h1>
-            <p class="hero-subheading">Koldly finds prospects, researches their pain points, writes personalized outreach, and books meetings — autonomously. Cold outreach on autopilot.</p>
+            <p class="hero-subheading">Koldly finds prospects, researches their pain points, and writes personalized outreach — autonomously. Cold outreach on autopilot.</p>
             <div class="hero-ctas">
                 <a href="/signup" class="btn btn-primary">Get Started Free</a>
                 <a href="/pricing" class="btn btn-secondary">View Pricing</a>
@@ -702,7 +697,25 @@
     <!-- Social Proof -->
     <section class="social-proof">
         <div class="container">
-            <p>🚀 Trusted by 10+ B2B founders</p>
+            <p>🚀 Built for B2B founders who hate doing outbound manually</p>
+        </div>
+    </section>
+
+    <!-- Product Preview -->
+    <section style="padding: 20px 0 60px;">
+        <div class="container">
+            <div style="background: var(--bg-card); border: 1px solid var(--border); border-radius: 16px; padding: 4px; max-width: 960px; margin: 0 auto; box-shadow: 0 20px 60px rgba(0,0,0,0.4);">
+                <div style="background: linear-gradient(135deg, #141414, #1A1A1A); border-radius: 12px; height: 420px; display: flex; align-items: center; justify-content: center; flex-direction: column; gap: 16px; position: relative; overflow: hidden;">
+                    <div style="position: absolute; top: 16px; left: 16px; display: flex; gap: 6px;">
+                        <div style="width: 10px; height: 10px; border-radius: 50%; background: #EF4444;"></div>
+                        <div style="width: 10px; height: 10px; border-radius: 50%; background: #F59E0B;"></div>
+                        <div style="width: 10px; height: 10px; border-radius: 50%; background: #10B981;"></div>
+                    </div>
+                    <span style="font-size: 56px; margin-bottom: 8px;">🖥️</span>
+                    <p style="color: var(--text-secondary); font-size: 18px; font-weight: 600;">AI-Powered Email Dashboard</p>
+                    <p style="color: var(--text-secondary); font-size: 14px; opacity: 0.7; max-width: 400px; text-align: center;">Manage prospects, review AI-drafted emails, and track campaign performance — all in one place</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -714,7 +727,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">🎯</div>
                     <h3>AI Prospect Discovery</h3>
-                    <p>Koldly finds your ideal customers across the web — LinkedIn, Twitter, communities — so you never run out of leads</p>
+                    <p>Describe your ideal customer and Koldly generates prospect profiles to kickstart your outreach. Import your own lists via CSV for verified data.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">✍️</div>
@@ -729,7 +742,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">📊</div>
                     <h3>Real-Time Analytics</h3>
-                    <p>Track open rates, reply rates, and meetings booked. Know exactly what's working and optimize on the fly</p>
+                    <p>Track open rates, reply rates, and campaign performance. Know exactly what's working and optimize on the fly</p>
                 </div>
             </div>
         </div>
@@ -752,8 +765,8 @@
                 </div>
                 <div class="step">
                     <div class="step-number">3</div>
-                    <h3>Meetings Land in Your Calendar</h3>
-                    <p>Sit back while Koldly sends, follows up, and books meetings for you</p>
+                    <h3>Review, Approve & Send</h3>
+                    <p>Review AI-drafted emails in your approval queue, tweak if needed, and let Koldly send and follow up automatically</p>
                 </div>
             </div>
         </div>
@@ -819,7 +832,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2026 Koldly. All rights reserved.</p>
+            <p>&copy; 2026 Koldly. All rights reserved. | <a href="mailto:support@koldly.com" style="color: var(--text-secondary); text-decoration: none;">support@koldly.com</a> | <a href="/terms" style="color: var(--text-secondary); text-decoration: none;">Terms</a> | <a href="/privacy" style="color: var(--text-secondary); text-decoration: none;">Privacy</a></p>
         </div>
     </footer>
 
@@ -855,6 +868,31 @@
             });
         });
     </script>
+    <!-- Cookie Consent Banner -->
+    <div id="cookieConsent" style="position:fixed; bottom:0; left:0; right:0; background:var(--bg-card); border-top:1px solid var(--border); padding:16px 20px; display:flex; justify-content:space-between; align-items:center; z-index:1000; gap:16px;">
+        <p style="font-size:13px; color:var(--text-secondary); margin:0;">We use cookies to improve your experience. By continuing, you agree to our <a href="/privacy" style="color:var(--accent); text-decoration:none;">Privacy Policy</a>.</p>
+        <div style="display:flex; gap:8px; flex-shrink:0;">
+            <button onclick="acceptCookies()" style="padding:8px 16px; background:var(--accent); color:white; border:none; border-radius:6px; font-size:13px; cursor:pointer; font-family:inherit;">Accept</button>
+            <button onclick="declineCookies()" style="padding:8px 16px; background:transparent; color:var(--text-secondary); border:1px solid var(--border); border-radius:6px; font-size:13px; cursor:pointer; font-family:inherit;">Decline</button>
+        </div>
+    </div>
+    <script>
+        (function() {
+            if (localStorage.getItem('cookie_consent')) {
+                var el = document.getElementById('cookieConsent');
+                if (el) el.style.display = 'none';
+            }
+        })();
+        function acceptCookies() {
+            localStorage.setItem('cookie_consent', 'accepted');
+            document.getElementById('cookieConsent').style.display = 'none';
+        }
+        function declineCookies() {
+            localStorage.setItem('cookie_consent', 'declined');
+            document.getElementById('cookieConsent').style.display = 'none';
+        }
+    </script>
+
     <script src="/js/notifications.js"></script>
     <script src="/js/error-handler.js"></script>
     <script src="/js/skeletons.js"></script>
