--- a/public/analytics.html
+++ b/public/analytics.html
@@ -175,13 +175,29 @@
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-section">
+                <div class="sidebar-title">Main</div>
                 <div class="sidebar-item" onclick="navigateTo('/dashboard')">
                     <span class="sidebar-icon">📊</span>
                     <span>Dashboard</span>
                 </div>
+                <div class="sidebar-item" onclick="navigateTo('/queue')">
+                    <span class="sidebar-icon">📋</span>
+                    <span>Approval Queue</span>
+                </div>
                 <div class="sidebar-item" onclick="navigateTo('/campaigns')">
-                    <span class="sidebar-icon">📧</span>
+                    <span class="sidebar-icon">📁</span>
                     <span>Campaigns</span>
+                </div>
+                <div class="sidebar-item" onclick="navigateTo('/pipeline')">
+                    <span class="sidebar-icon">🔄</span>
+                    <span>Pipeline</span>
+                </div>
+            </div>
+            <div class="sidebar-section">
+                <div class="sidebar-title">Tools</div>
+                <div class="sidebar-item" onclick="navigateTo('/inbox')">
+                    <span class="sidebar-icon">📥</span>
+                    <span>Inbox</span>
                 </div>
                 <div class="sidebar-item active" onclick="navigateTo('/analytics')">
                     <span class="sidebar-icon">📈</span>
@@ -193,7 +209,11 @@
                 </div>
             </div>
             <div class="sidebar-section">
-                <div class="sidebar-title">Settings</div>
+                <div class="sidebar-title">Account</div>
+                <div class="sidebar-item" onclick="navigateTo('/billing')">
+                    <span class="sidebar-icon">💳</span>
+                    <span>Billing</span>
+                </div>
                 <div class="sidebar-item" onclick="navigateTo('/settings')">
                     <span class="sidebar-icon">⚙️</span>
                     <span>Settings</span>
@@ -202,6 +222,12 @@
                     <span class="sidebar-icon">🚪</span>
                     <span>Logout</span>
                 </div>
+            </div>
+            <div class="sidebar-section" style="margin-top: auto; padding-top: 16px; border-top: 1px solid var(--border);">
+                <a href="mailto:support@koldly.com" class="sidebar-item" style="font-size: 12px;">
+                    <span class="sidebar-icon">📧</span>
+                    <span>support@koldly.com</span>
+                </a>
             </div>
         </aside>
 
